--- a/src/pages/home/HomeResponsive.css
+++ b/src/pages/home/HomeResponsive.css
@@ -1,4 +1,4 @@
-@media (max-width: 980px) {
+@media (max-width: 1100px) {
   .home-topbar {
     grid-template-columns: 1fr auto;
   }
@@ -567,7 +567,7 @@
   }
 }
 
-@media (min-width: 981px) and (max-height: 780px) {
+@media (min-width: 1101px) and (max-height: 780px) {
   .home-topbar {
     min-height: 76px;
     padding-top: 16px;
